kubernetes/apps/monitoring/omada-exporter/templates/network_policy.yaml
---
# yaml-language-server: $schema=https://deedee-ops.github.io/schemas/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: omada-exporter
  namespace: monitoring
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: omada-exporter
    egress:
      - toPorts:
          - ports:
              - port: "53"
                protocol: ANY
            rules:
              dns:
                - matchPattern: "*"
      - toPorts:
          - ports:
              - port: "443"
                protocol: TCP
        toCIDRSet:
          - cidr: "<path:kubernetes/data/internal/base#IP_SUPERVISOR>/32"
